--- a/laravel/public/css/default.css
+++ b/laravel/public/css/default.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+/* TODO: Normalize the css and split into global and page files */
 :root {
     --primary: #ff0050;
     --background: #121212;
     --foreground: #202020;
     --text: #bbb;
 }
-
+/* TODO: Add support for custom css & set simple colours in a config */
 body {
     margin: 0;
     overflow: hidden;
