--- a/laravel/public/css/default.css
+++ b/laravel/public/css/default.css
@@ -93,6 +93,16 @@ header nav a {
     box-shadow: 3px 3px 10px 0 #0008;
 }
 
+#profile-container {
+    margin: 5vh auto;
+}
+
+.button-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 .form-container form {
     display: flex;
     flex-direction: column;
@@ -106,6 +116,12 @@ header nav a {
     border-bottom: 1px solid var(--primary);
     font-size: 1.3em;
     margin-bottom: 20px;
+}
+
+.form-container form input.unmodifiable {
+    color: #aaa;
+    border: none;
+    pointer-events: none;
 }
 
 .form-container form label {
@@ -139,6 +155,16 @@ header nav a {
     background: #ff000028;
     border-radius: 5px;
     padding: 10px;
+    margin-bottom: 0;
+}
+
+.form-container .success {
+    width: 280px;
+    color: #00bb00;
+    background: #00ff0028;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 0;
 }
 
 #banner-container {
@@ -367,6 +393,11 @@ header nav a {
 
 #destination {
     max-width: 850px;
+    word-break: break-all;
+    height: 1.2em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 button {
