--- a/laravel/public/css/default.css
+++ b/laravel/public/css/default.css
@@ -142,11 +142,7 @@ header nav a {
 }
 
 .form-container button:hover, button[type="submit"]:hover {
-    box-shadow: 0px 0px 10px 0 #ff005080;
-}
-
-.form-container button:active, button[type="submit"]:active {
-    background-color: #cc0035;
+    box-shadow: 0px 0px 15px -5px var(--primary);
 }
 
 .form-container .error {
